Add autoload for utility functions: Included src/Lithe/Utilities/asset.php in the autoload files section.

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
     "autoload": {
         "psr-4": {
             "Lithe\\": "Lithe/"
-        }
+        },
+        "files": [
+            "src/Lithe/Utilities/asset.php"
+        ]
     },
     "require": {
         "php": "^8.2",
