Refactor autoload paths in composer.json

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "Lithe\\": "Lithe/"
         },
         "files": [
-            "src/Lithe/Utilities/asset.php"
+            "Lithe/Utilities/asset.php"
         ]
     },
     "require": {
